tests/cases/smoke/invalid/func_return_wrong_type.ty
func add(a: int, b: int) -> int {
    return "x"
}
